--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python==3.10.10
-numpy==1.22.3
+python==3.7.7
+numpy==1.21.6
 nltk==3.7
 scikit-learn==1.0.2
-pytorch==2.0.0
+torch==1.13.1
 transformers==4.27.3
